[gd_scene load_steps=25 format=3 uid="uid://3m16rq2iy46h"]

[ext_resource type="Script" uid="uid://crgolyg71k1hp" path="res://player.gd" id="1_0f027"]
[ext_resource type="PackedScene" uid="uid://cl7anl54dh1hh" path="res://nav_target.tscn" id="2_2c62f"]
[ext_resource type="Script" uid="uid://cpmln1u0eaq1y" path="res://navigation.gd" id="2_gyfs4"]
[ext_resource type="Script" uid="uid://bd2klxuv4qi5h" path="res://ui.gd" id="5_8mm7a"]
[ext_resource type="Script" uid="uid://c2wp2movmkicx" path="res://ui_action_queue.gd" id="6_66tet"]
[ext_resource type="PackedScene" uid="uid://5fd7q0vhleue" path="res://needs_slider.tscn" id="6_hq1ik"]
[ext_resource type="Script" uid="uid://ciqvtws8hkehe" path="res://ai_enabled_button.gd" id="7_nfk4m"]
[ext_resource type="Script" uid="uid://c8k71f7p0jecp" path="res://ui_help.gd" id="8_66tet"]

[sub_resource type="BoxMesh" id="BoxMesh_onrkg"]
size = Vector3(10, 0.1, 5)

[sub_resource type="BoxMesh" id="BoxMesh_i3pqv"]
size = Vector3(0.1, 3, 1)

[sub_resource type="BoxMesh" id="BoxMesh_hqtel"]

[sub_resource type="BoxMesh" id="BoxMesh_sweqy"]
size = Vector3(1, 0.5, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8mm7a"]

[sub_resource type="BoxMesh" id="BoxMesh_hq1ik"]

[sub_resource type="BoxMesh" id="BoxMesh_nfk4m"]

[sub_resource type="BoxMesh" id="BoxMesh_66tet"]

[sub_resource type="BoxMesh" id="BoxMesh_7ycvg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2hs0m"]
height = 1.8

[sub_resource type="LabelSettings" id="LabelSettings_8mm7a"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_hq1ik"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_66tet"]
font_size = 32

[sub_resource type="Theme" id="Theme_hq1ik"]
default_font_size = 48

[sub_resource type="Theme" id="Theme_nfk4m"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_66tet"]
default_font_size = 32

[node name="MainScene" type="Node3D"]

[node name="Room" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.50797, 4.76837e-07, 0.00538111)
mesh = SubResource("BoxMesh_onrkg")
skeleton = NodePath("../..")

[node name="Wall" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 5.02183, 2.5, 1.5, 0)
mesh = SubResource("BoxMesh_i3pqv")
skeleton = NodePath("../..")

[node name="Wall2" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-4.37114e-08, 0, 9.82229, 0, 1, 0, -1, 0, -4.29346e-07, -2.44053, 1.5, 2.5)
mesh = SubResource("BoxMesh_i3pqv")
skeleton = NodePath("../..")

[node name="Wall3" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 5.02183, -7.43649, 1.5, -0.00290298)
mesh = SubResource("BoxMesh_i3pqv")
skeleton = NodePath("../..")

[node name="Counter" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 4.94746, 2, 0.5, 0)
mesh = SubResource("BoxMesh_hqtel")
skeleton = NodePath("../..")

[node name="Counter2" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-4.37114e-08, 0, 2.80989, 0, 1, 0, -1, 0, -1.22824e-07, 0.116617, 0.511446, 2.00497)
mesh = SubResource("BoxMesh_hqtel")
skeleton = NodePath("../..")

[node name="Bed" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1.36392, 0, 0, 0, 1, 0, 0, 0, 1.7947, -3.26197, 0.25, 1.47558)
mesh = SubResource("BoxMesh_sweqy")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/Bed"]
transform = Transform3D(0.93, 0, 0, 0, 0.465458, 0, 0, 0, 0.23, -0.0105117, 0.396424, 0.38205)
mesh = SubResource("BoxMesh_8mm7a")

[node name="Toilet" type="MeshInstance3D" parent="Room"]
transform = Transform3D(0.55251, 0, 0, 0, 0.378791, 0, 0, 0, 0.784598, -6.13607, 0.226621, 1.97513)
mesh = SubResource("BoxMesh_hq1ik")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/Toilet"]
transform = Transform3D(0.668247, 0, 0, 0, 1.29231, 0, 0, 0, 0.317673, -0.0197109, 0.97623, 0.215639)
mesh = SubResource("BoxMesh_nfk4m")

[node name="Couch" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-0.385793, 0, 1.81409, 0, 0.413993, 0, -0.719832, 0, -0.972256, -1.61293, 0.22423, -1.21072)
mesh = SubResource("BoxMesh_66tet")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Room/Couch"]
transform = Transform3D(0.360689, 0, 0, 0, 1, 0, 0, 0, 1, -0.361944, 0.94984, 0)
mesh = SubResource("BoxMesh_66tet")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Room/Couch"]
transform = Transform3D(0.664263, 0, 0, 0, 1, 0, 0, 0, 0.10251, 0.149483, 0.557227, 0.4232)
mesh = SubResource("BoxMesh_66tet")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Room/Couch"]
transform = Transform3D(0.664263, 0, 0, 0, 1, 0, 0, 0, 0.10251, 0.152864, 0.553188, -0.439855)
mesh = SubResource("BoxMesh_66tet")
skeleton = NodePath("../..")

[node name="BowlingLane" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 0.13925, 0, 0, 0, 2.79557, -6.73506, 0.0596365, -0.869909)
mesh = SubResource("BoxMesh_7ycvg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(0.0859585, 0, 0, 0, 1.06099, 0, 0, 0, 1, 0.442798, 1.02733, 0)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(0.0859585, 0, 0, 0, 1.06099, 0, 0, 0, 1, -0.449592, 1.02733, 0)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(0.0859585, 0, 0, 0, 3.00782, 0, 0, 0, 0.196518, -0.449592, 2.96639, 0.400729)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(0.0859585, 0, 0, 0, 3.00782, 0, 0, 0, 0.196518, 0.438841, 2.96639, 0.400729)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(-0.856756, 0, 0, 0, 4.29195, 0, 0, 0, 0.0363614, 0.00304079, 2.31, 0.479223)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(-0.856756, 0, 0, 0, 0.418172, 0, 0, 0, 0.196081, 0.00477219, 4.27411, 0.403217)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(-0.0651982, 0, 0, 0, 0.964616, 0, 0, 0, 0.0411139, 0.303771, 0.95038, 0.386758)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Room/BowlingLane/MeshInstance3D7"]
transform = Transform3D(0.607891, 0, 0, 0, 0.607891, 0, 0, 0, 0.607891, 0, 0.728347, 0)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(-0.0651982, 0, 0, 0, 0.964616, 0, 0, 0, 0.0411139, 0.184505, 0.95038, 0.386314)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Room/BowlingLane/MeshInstance3D8"]
transform = Transform3D(0.607891, 0, 0, 0, 0.607891, 0, 0, 0, 0.607891, 0, 0.728347, 0)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../../..")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(-0.0651982, 0, 0, 0, 0.964616, 0, 0, 0, 0.0411139, 0.0758247, 0.95038, 0.386362)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Room/BowlingLane/MeshInstance3D9"]
transform = Transform3D(0.607891, 0, 0, 0, 0.607891, 0, 0, 0, 0.607891, 0, 0.728347, 0)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../../..")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(-0.0651982, 0, 0, 0, 0.964616, 0, 0, 0, 0.0411139, -0.0426693, 0.950379, 0.383355)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Room/BowlingLane/MeshInstance3D10"]
transform = Transform3D(0.607891, 0, 0, 0, 0.607891, 0, 0, 0, 0.607891, 0, 0.728347, 0)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../../..")

[node name="MeshInstance3D11" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(-0.0651982, 0, 0, 0, 0.964616, 0, 0, 0, 0.0411139, -0.178618, 0.950379, 0.378003)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Room/BowlingLane/MeshInstance3D11"]
transform = Transform3D(0.607891, 0, 0, 0, 0.607891, 0, 0, 0, 0.607891, 0, 0.728347, 0)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../../..")

[node name="MeshInstance3D12" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(-0.0651982, 0, 0, 0, 0.964616, 0, 0, 0, 0.0411139, -0.298599, 0.950379, 0.377562)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Room/BowlingLane/MeshInstance3D12"]
transform = Transform3D(0.607891, 0, 0, 0, 0.607891, 0, 0, 0, 0.607891, 0, 0.728347, 0)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../../..")

[node name="MeshInstance3D13" type="MeshInstance3D" parent="Room/BowlingLane"]
transform = Transform3D(-0.149234, 0, 0, 0, 1.21469, 0, 0, 0, 0.0533089, 0.0226603, 0.857136, -0.440342)
mesh = SubResource("BoxMesh_7ycvg")
skeleton = NodePath("../..")

[node name="Player" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.11334, 0, -1.12254)
script = ExtResource("1_0f027")

[node name="Mesh" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_2hs0m")

[node name="Navigation" type="Node3D" parent="."]
script = ExtResource("2_gyfs4")

[node name="Bed" parent="Navigation" instance=ExtResource("2_2c62f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.04728, 0.347831, 1.59247)

[node name="KitchenCounter" parent="Navigation" instance=ExtResource("2_2c62f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.18558, -2.38419e-07, -0.108219)

[node name="Toilet" parent="Navigation" instance=ExtResource("2_2c62f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.08991, 0.347831, 1.93032)

[node name="Couch" parent="Navigation" instance=ExtResource("2_2c62f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.66387, 0.347831, -1.21936)

[node name="Bowling" parent="Navigation" instance=ExtResource("2_2c62f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.70815, 0.347831, -1.40284)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.977747, 0.0910727, -0.18899, -3.79515e-08, 0.900857, 0.434115, 0.209789, 0.424455, -0.88081, -4.35603, 4.49918, -6.29814)
rotation_order = 1
fov = 80.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.763785, 0.586439, -0.26967, 0, 0.417788, 0.908544, 0.645471, 0.693933, -0.3191, -5.63712, 5.26218, -0.648359)

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("5_8mm7a")

[node name="Time" type="Label" parent="UI"]
offset_left = 33.0
offset_top = 12.0
offset_right = 197.0
offset_bottom = 100.0
text = "99:99"
label_settings = SubResource("LabelSettings_8mm7a")

[node name="ActionQueueLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -467.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = 91.0
grow_horizontal = 0
text = "Action Queue"
label_settings = SubResource("LabelSettings_hq1ik")
horizontal_alignment = 2

[node name="Sliders" type="VBoxContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -463.0
offset_top = -232.0
offset_right = -34.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnergySlider" parent="UI/Sliders" instance=ExtResource("6_hq1ik")]
layout_mode = 2
need_name = "Energy"

[node name="HungerSlider" parent="UI/Sliders" instance=ExtResource("6_hq1ik")]
layout_mode = 2
need_name = "Hunger"

[node name="BladderSlider" parent="UI/Sliders" instance=ExtResource("6_hq1ik")]
layout_mode = 2
need_name = "Bladder"

[node name="FunSlider" parent="UI/Sliders" instance=ExtResource("6_hq1ik")]
layout_mode = 2
need_name = "Fun"

[node name="ActionQueue" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -315.0
offset_top = 6.0
offset_right = -275.0
offset_bottom = 46.0
grow_horizontal = 0

[node name="Title" type="Label" parent="UI/ActionQueue"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 45.0
text = "Action Queue"
label_settings = SubResource("LabelSettings_66tet")
horizontal_alignment = 2

[node name="Container" type="VBoxContainer" parent="UI/ActionQueue"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 50.0
offset_right = 260.0
offset_bottom = 144.0
grow_horizontal = 0
script = ExtResource("6_66tet")

[node name="AIEnabledButton" type="Button" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 49.0
offset_top = -103.0
offset_right = 341.0
offset_bottom = -28.0
grow_vertical = 0
theme = SubResource("Theme_hq1ik")
toggle_mode = true
text = "AI Disabled"
script = ExtResource("7_nfk4m")

[node name="Help" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 18.0
offset_top = 129.0
offset_right = 58.0
offset_bottom = 169.0
script = ExtResource("8_66tet")

[node name="Shown" type="Button" parent="UI/Help"]
layout_mode = 0
offset_right = 168.0
offset_bottom = 53.0
theme = SubResource("Theme_nfk4m")
toggle_mode = true
button_pressed = true
text = "Hide help"

[node name="Bg" type="ColorRect" parent="UI/Help"]
layout_mode = 0
offset_left = 1.0
offset_top = 61.0
offset_right = 41.0
offset_bottom = 101.0
scale = Vector2(34.76, 16.1064)
color = Color(0.219501, 0.219501, 0.219501, 0.623529)

[node name="HelpText" type="Label" parent="UI/Help"]
layout_mode = 0
offset_left = 5.0
offset_top = 67.0
offset_right = 1315.0
offset_bottom = 448.0
theme = SubResource("Theme_66tet")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "- This is Bowling Bob
- His days consist of eating without a table, 
  sleeping while standing
  and playing bowling without moving a muscle

- Click on red spheres to go do actions
- Actions will continue until a need is fulfilled
- Actions in the action queue can be canceled
- Available actions: sleep, cook, go to the toilet, relax, play bowling
- Keys 1, 2, 3, 4, 5 - Control time scale
- Character AI can be enabled or disabled with the button at the bottom left
- AI will try to keep up with the character needs to the best of its ability
- You can try to mess around with the AI by canceling actions and queueing new ones"

[node name="GameOverScreen" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 0.87451)

[node name="Label" type="Label" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -66.0
offset_right = 252.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "GAME OVER"

[node name="Reason" type="Label" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = 56.0
offset_right = 252.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Bowling Bob died of reason"
horizontal_alignment = 1

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="toggled" from="UI/AIEnabledButton" to="UI/AIEnabledButton" method="_on_toggled"]
[connection signal="toggled" from="UI/Help/Shown" to="UI/Help" method="_on_shown_toggled"]
